--- a/skysub.tex
+++ b/skysub.tex
@@ -407,7 +407,17 @@ This implies that any endeavor to removed residual sky shapes in the final mosai
 
 Our planar sky offset optimization algorithm is a direct evolution of the scalar case. As before, difference images are assembled from each coupled pair of blocks. For each difference image we fit a plane $\epsilon_{ij} = (m_x, m_y, c)$: that is, $x$- and $y$-axis slopes and the level $c$ at the center of the difference image. The plane fitting is done iteratively with sigma clipping to reduce the influence of stellar PSF differences of bright stars. Our goal is now to find the sky offset planes for each block, $\Delta_\mathrm{block} = (\Delta_x, \Delta_y, \Delta_c)$, that maximally reduce flux in the difference planes.
 
-The multi-start re-converging Nelder-Mead simplex is again a flexible tool for searching parameter space and finding a global minimum. Planar optimization is more challenging because the parameters in the simplex no longer carry the same meanings, and in particular, have different dynamic ranges. We attempted to simultaneously optimizes planar slopes and levels
+The multi-start re-converging Nelder-Mead simplex is again a flexible tool for searching parameter space and finding a global minimum. Planar optimization is more challenging because the parameters in the simplex no longer carry the same meanings, and in particular, have different dynamic ranges. Though we attempted to simultaneously optimize planar slopes and levels by scaling slopes to the same order as levels, that optimization apparatus never converged reliably. Instead, we use an algorithm that iteratively alternates between improving planar levels and slopes until convergence is reached.
+
+Working in the framework of a multi-start optimization, we generate a large suite of random planar offsets that serve as starting points for each optmization `start.' Random planar offsets have levels and slopes drawn from Gaussian distributions $N(0, \sigma_{c,\mathrm{init}})$ and $N(0, \sigma_{x,y,\mathrm{init}})$, respectively. From each initial point, the optimization two Nelder Meade simplex optimizations in succession, each with the ensured reconvergence mechanism (previously described for scalar offset optimiation \S \todo{todo}).
+
+First, planar slopes are optimized\ldots
+
+Second, the overall levels of planes are optimized\ldots
+
+Together, these two optimization steps produce a new generation of $\Delta_\mathrm{block}$ planar offsets. These new offsets are compared to the previous generation (or the initial random planes for the first iteration) and the fractional difference of each slope and offset is measured. If any fractional difference exceedes a convergence tolerance of 10$^{-7}$, another iteration of optimization is performed. In this iteration, the current planes become new seed planes, and the successive slope and level optimizations are performed. Once an iteration produces planes effectively identical to the previous iteration, the optimization is stopped.
+
+The $N$ optimization starts creates $N$ potential sky offset solutions. To choose the best solution, we seek the solution that minimized the level objective function, $\mathcal{F}_c$. This objective is sensitive to the overall surface intensity difference between coupled fields, while still being dependent on the quality of the planar slopes.
 
 \bibliography{master}
 
