--- a/skysub.tex
+++ b/skysub.tex
@@ -59,9 +59,10 @@ Here are some opening thoughts.
 
 \begin{figure}[t]
 	\centering
-		\includegraphics[height=3in]{figs/fieldmap}
+		\includegraphics[width=3in]{figs/fieldmap}
 	\caption{WIRCam field positions on M31.}
 	\label{fig:fieldmap}
+	% made with skyoffsets/chart.py
 \end{figure}
 
 \begin{figure}[t]
@@ -69,6 +70,7 @@ Here are some opening thoughts.
         \includegraphics[width=3in]{figs/sky_target_lag}
     \caption{Time latency between target observations and sky field sampling in the 2007B and 2009B WIRCam observing runs.}
     \label{fig:sky_target_lag}
+    % made with skyoffsets/obs_run_stats.py
 \end{figure}
 
 \begin{figure}[t]
@@ -76,6 +78,7 @@ Here are some opening thoughts.
         \includegraphics[width=3in]{figs/sky_target_dist}
     \caption{Distance between sky and target observations in the 2007B and 2009B WIRCam observing runs.}
     \label{fig:sky_target_dist}
+    % made with skyoffsets/obs_run_stats.py
 \end{figure}
 
 % Surface brightness CI from skyoffset/net_sky_level.py
@@ -221,18 +224,18 @@ $K_s$ & 09BQ08 & 637 & 8 \\
 \subsection{Sky flat performance}
 \label{sec:skyflatstats}
 
-%\begin{figure}[p]
-%    \centering
-%     \includegraphics[width=\textwidth]{figs/flat/09BQ01_Ks_domeflatratio.pdf}
-%    \caption[Dome - sky flat ratio image.]{Percent difference image of the 09BQ01 $K_s$ sky flat to the \texttt{domeflat\_8302B\_20090728HST143302\_Ks} dome flat used in the \iiwione\ pipeline.}
-%    \label{fig:domeflatratio}
-%    % thesis/flatratio.py
-%\end{figure}
+\begin{figure}[t]
+   \centering
+    \includegraphics[width=3in]{figs/flatratio_09BQ01_Ks_twocol}
+   \caption{Percent difference image of the 09BQ01 $K_s$ sky flat to the \texttt{domeflat\_8302B\_20090728HST143302\_Ks} dome flat used in the \iiwione\ pipeline.}
+   \label{fig:domeflatratio}
+   % made with skysubpub/flatratio.py
+\end{figure}
 
 \subsubsection{Comparison to \iiwione\ dome flats}
 
 
-To illustrate the disagreement between the sky and \iiwione\ dome flats, Fig. \todo{fig:domeflatratio} shows a percent difference map of a \iiwione\ dome flat to a sky flat produced via the procedure in \S \todo{sec:skyflatpro}. This map reveals a $\pm2\%$ discrepancy between the two types of flat fields.
+To illustrate the disagreement between the sky and \iiwione\ dome flats, Fig. \ref{fig:domeflatratio} shows a percent difference map of a \iiwione\ dome flat to a sky flat produced via the procedure in \S \todo{sec:skyflatpro}. This map reveals a $\pm2\%$ discrepancy between the two types of flat fields.
 % FIXME see thesis/flatratio.py and thesis_plots/ for the flat ratio image.
 % In Ks I do see 2\% -- 4\% edge-to-edge.
 % TODO repeat this for both $J$ and $K_s$ sky flats.
@@ -241,13 +244,16 @@ In practice, the sky flat appears to be the correct description of the WIRCam il
 \subsubsection{Flatness of sky flats}
 \label{sec:skyflatshapes}
 
-%\begin{figure}[p]
-%	\centering
-%		\includegraphics[width=\textwidth]{figs/flat/07BQ05_Ks.pdf}
-%	\caption[Sky shape composition of 07BQ05 $K_s$ sky flat]{Evolution of the shapes of sky images composed in the 07BQ05 $K_s$ sky flat. Shape is measured as the median trend across the columns (left array) and rows (right array) WIRCam images. These trends are normalizes to the level at the centre of the detector, $I_o$. Axes are arranged to match the $2\times 2$ configuration of WIRCam. Colours highlight the observation sequence of images.}
-%	\label{fig:flat_07BQ05_Ks}
-%	% flatshapes.py
-%\end{figure}
+\begin{figure}[t]
+    \centering
+        \includegraphics[width=3in]{figs/07BQ05_Ks.pdf}
+    \caption{Evolution of the shapes of sky images composed in the 07BQ05 $K_s$ sky flat. Shape is measured as the median trend across the columns (left array) and rows (right array) WIRCam images. These trends are normalized to the level at the centre of the detector, $I_o$. Axes are arranged to match the $2 \times 2$ configuration of WIRCam. Colours highlight the observation sequence of images.}
+    \label{fig:flat_07BQ05_Ks}
+    % flatshapes.py
+    % need to import code used to generate this type of plot
+    % TODO label the colourbar as "Sky Image Index", note that its ordered
+    % but not necessarily time proportional
+\end{figure}
 
 %\begin{figure}[t]
 %	\centering
@@ -257,13 +263,13 @@ In practice, the sky flat appears to be the correct description of the WIRCam il
 %	% flatshapes.py
 %\end{figure}
 
-%\begin{figure}[t]
-%    \centering
-%        \includegraphics[width=\textwidth]{figs/flat/07BQ03_J.pdf}
-%    \caption[Sky shape composition of the 07BQ03 $J$ sky flat]{Sky shape composition of the 07BQ03 $J$ sky flat. See Fig. \ref{fig:flat_07BQ05_Ks} for explanation.}
-%    \label{fig:flat_07BQ03_J}
-%    % flatshapes.py
-%\end{figure}
+\begin{figure}[t]
+   \centering
+       \includegraphics[width=3in]{figs/07BQ03_J.pdf}
+   \caption[Sky shape composition of the 07BQ03 $J$ sky flat]{Sky shape composition of the 07BQ03 $J$ sky flat. See Fig. \ref{fig:flat_07BQ05_Ks} for explanation.}
+   \label{fig:flat_07BQ03_J}
+   % flatshapes.py
+\end{figure}
 
 Ultimately, the accuracy of sky flats is limited by the distribution of intrinsic shapes in the NIR sky. Wide-field movies of the near-infrared sky \citep{Adams:1996} show the NIR sky glow to be akin to a moving cloud system. As such, the NIR sky seen by WIRCam is never flat---yet by definition a flat field must necessarily be built from an intrinsically uniform illumination across the telescope focal plane. In producing a NIR sky flat, we hypothesize that the \emph{mean shape} of the NIR sky, over the span of a queue run, is flat.
 
@@ -271,21 +277,22 @@ In \todo{Figures} \ref{fig:flat_07BQ05_Ks}--\ref{fig:flat_07BQ03_J}, I plot the 
 
 For example, in 07BQ05 ($K_s$) (Fig. \ref{fig:flat_07BQ05_Ks}), we see distinct traces of sky shapes that correspond to the sporadic activation of this observing program over several nights, for 30 minutes to hours at a time (as is the normal structure of queued observing blocks). Over the span of an \emph{observing block}, the sky will vary slowly. Once the sky is observed again on a different night in a queue run, the sky shape will be vastly different, creating the two distinct sets of shapes. In other cases where more observations are made under different sky conditions, such as 09BQ08 ($K_s$), a more continuous set of sky shapes is observed. In the $J$ band (\eg, Fig. \ref{fig:flat_07BQ03_J}), these distinct sky morphologies are not as pronounced because at the 0.1\% level, the edge-edge sky variation is closer to the intrinsic Poisson pixel noise of the sky (which itself is $\sim 0.1\%$ of the typical $J$ sky intensity per pixel).
 
-%\begin{figure}[p]
-%  \centering
-%      \includegraphics[height=8in]{figs/flat/flatslices_07.pdf}
-%  \caption{Shapes of sky flats across WIRCam detector \#2 for each queue run, in $J$ and $K_s$ compiled in 2007B.}
-%  \label{fig:flat_flatslices_07}
-%  % flatslice.py
-%\end{figure}
+\begin{figure}[t]
+ \centering
+     \includegraphics[width=3in]{figs/flatslices_07.pdf}
+ \caption{Shapes of sky flats across WIRCam detector \#2 for each queue run, in $J$ and $K_s$ compiled in 2007B.}
+ \label{fig:flat_flatslices_07}
+ % flatslice.py
+ % TODO generate the code that makes this
+\end{figure}
 
-%\begin{figure}[p]
+% \begin{figure}[p]
 %  \centering
 %      \includegraphics[height=8in]{figs/flat/flatslices_09.pdf}
 %  \caption{Shapes of sky flats across WIRCam detector \#2 for each queue run, in $J$ and $K_s$ compiled in 2009B.}
 %  \label{fig:flat_flatslices_09}
 %  % flatslice.py
-%\end{figure}
+% \end{figure}
 
 One test of the robustness of queue sky flats is to compare the shapes of independent flats from different queue runs. Since WIRCam is removed from the telescope between queue runs, this test effectively provides an upper limit on the bias in the shape built from a finite ensemble of sky images. In figures \ref{fig:flat_flatslices_07} and \ref{fig:flat_flatslices_09} I plot the distribution of vertical and horizontal \emph{slices} through the centre of the sky flats assembled for each QSO run in a given semester, along with the residuals against the median shape. These shapes are from the median of 200 pixel-wide (1\arcmin) slices through the centre of the lower-right detector, and thus resolve specific changes in the perceived detector illumination distribution. I find (queue-) run-to-run shape variations of $\pm$ 0.4\% in both $J$ and $K_s$ bands. Given that the amplitude of $J$ sky variations is only 0.1\% (Fig. \ref{fig:flat_07BQ03_J}), most of the run-to-run flat illumination variation must be intrinsic to changes in the light path. This leaves $<0.1$\% flat field illumination variation attributable to biases in sky shape composition.
 
@@ -362,6 +369,8 @@ A future revision of this WIRCam pipeline will solve for colour terms in the zer
 		\includegraphics[width=6in]{figs/raw_mosaics}
 	\caption{Median sky subtracted WIRCam $J$ (left) and $K_s$ (right) mosaics of M31.}
 	\label{fig:raw_mosaics}
+	% made with skysubpub/mosaic_plots.py
+	% + skysubpub/raw_mosaic.py
 \end{figure*}
 
 \section{Scalar Sky Optimization}
@@ -454,6 +463,7 @@ But NM has two weaknesses. First, it is a \emph{greedy} optimizer that will conv
 		\includegraphics[width=6in]{figs/scalar_mosaics}
 	\caption{Scalar-sky fitted WIRCam $J$ (left) and $K_s$ (right) mosaics of M31. Note the qualitative improvement compared to the original, median sky-subtracted, images in Fig. \ref{fig:raw_mosaics}.}
 	\label{fig:scalar_mosaics}
+	% made with skysubpub/mosaic_plots.py
 \end{figure*}
 
 \section{Planar Sky Offsets}
