--- a/skysub.tex
+++ b/skysub.tex
@@ -466,6 +466,16 @@ But NM has two weaknesses. First, it is a \emph{greedy} optimizer that will conv
 	% made with skysubpub/mosaic_plots.py
 \end{figure*}
 
+\begin{figure*}[t]
+    \centering
+        \includegraphics[width=6in]{figs/offset_ratio_map_enhanced}
+    \caption{Acceptability of $J$ and $K_s$ scalar sky offsets between blocks, as measured by the ratio of $\Delta_\mathrm{block}/\sigma_\mathrm{stack}$.}
+    \label{fig:offset_ratio_map}
+    % made with skyoffset/offsetratiomap.py
+    % TODO need to fix colour scheme of the histograms
+\end{figure*}
+
+
 \section{Planar Sky Offsets}
 
 Scalar sky offsets are greatly effective for recovering the galaxy intensity from sky background uncertainties. But the reconstructed galaxy mosaics (Fig. \todo{maps}) reveal field-to-field discontinuities in the outer disk of roughly the same magnitude as the intrinsic disk surface brightness. These discontinuities are not a failure of the scalar sky offset method to converge; rather, they reveal that residual sky flux has a \emph{shape} across blocks.
