--- a/skysub.tex
+++ b/skysub.tex
@@ -27,8 +27,9 @@
 \newcommand{\sn}{\ensuremath{S/N}} % signal to noise
 \newcommand{\sersic}{S\'{e}rsic}
 \newcommand{\iiwione}{\sw{`I`iwi 1.0}}
-\newcommand{\awkward}[1]{\textcolor{red}{#1}}
-\newcommand{\todo}[1]{\textcolor{green}{#1}}
+\newcommand{\androids}{\textsc{androids}}
+\newcommand{\changeit}[1]{\textcolor{red}{#1}} % markup bad sections
+\newcommand{\todo}[1]{\textcolor{green}{#1}} % markup TODOs
 
 % To track draft versions in git
 \IfFileExists{vc.tex}{\input{vc}}{}
@@ -45,12 +46,14 @@
 \affil{Queen's University}
 \affil{Stirling Hall, Kingston Canada}
 \email{jsick@astro.queensu.ca}
+% \author{Michael McDonald, Brent Tully, Roelof de Jong}
 
 \begin{abstract}
 Here is an abstract.
 \end{abstract}
 
 \section{Introduction}
+\label{sec:intro}
 
 Here are some opening thoughts.
 
@@ -118,24 +121,22 @@ Here are some opening thoughts.
 
 The Andromeda Galaxy (M31) was observed in the NIR using the WIRCam instrument, mounted to the 3.6-meter Canada-France-Hawaii Telescope (CFHT), at the summit of Mauna Kea in Hawaii. Observations were carried out exclusively in the NIR $J$ ($\lambda_0 \sim 1.2 \mu\mathrm{m}$) and $K_s$ ($\lambda_0 \sim 2.2 \mu\mathrm{m}$) bands.
 
-WIRCam itself is an array of four HgCdTe HAWAII-RG2 detectors \citep{Puget:2004}. Each detector comprises $2048\times 2048$ pixels, with a scale of 0\farcs 3. This pixel scale critically samples the typical seeing of 0\farcs 65 seen by CFHT. At this pixel scale, M31 stars are well resolved in the halo and outer disk. For reference, $1\arcmin = 3.7\mathrm{pc}$ across the disk of M31. The detectors are arranged in a $2\times 2$ grid with 45\arcsec\ gaps, so that the entire instrument covers $21.5\arcmin \times 21.5\arcmin$ of sky. It is truly the recent advent of NIR focal plane arrays, like WIRCam, that have enabled relatively efficient studies of M31 in the NIR.
+WIRCam itself is an array of four HgCdTe HAWAII-RG2 detectors \citep{Puget:2004}. Each detector comprises $2048\times 2048$ pixels, with a scale of 0\farcs 3 . This pixel scale critically samples the typical seeing of 0\farcs 65 seen by CFHT. For reference, $1\arcsec = 3.7~\mathrm{pc}$ across the disk of M31. The detectors are arranged in a $2\times 2$ grid with 45\arcsec\ gaps, so that the entire instrument covers $21.5\arcmin \times 21.5\arcmin$ of sky. It is truly the recent advent of NIR focal plane arrays, like WIRCam, that have enabled relatively efficient studies of M31 in the NIR.
 
-In designing our survey of M31, we were driven by two distinct regimes of data reduction and scientific analysis: a high \sn\ image of integrated surface brightness, and resolution of individual Andromeda stars for colour-magnitude diagram analysis. \todo{As discussed in \S}, by simultaneously observing both integrated \emph{and} resolved NIR starlight, we can constrain stellar population synthesis models. Observationally identifying the types of stars that contribute to the NIR light can have profound implications on the inferred masses and ages of distant galaxies.
+The \androids\ WIRCam survey is designed to simultaneously resolve stars and recover the integrated surface brightness of the M31 disk. While the former objective is attained by requesting good seeing in Queued Service Observing mode (see Table \ref{tab:obssummary}), WIRCam has not previously been used to recover surface brightness at the accuracy required---$\mu_{K_s}\lesssim~22$~mag~arcsec$^{-2}$---across entire detector fields. As discussed in \S \ref{sec:intro}, NIR observations require frequent monitoring of the sky background. Since M31, with a $190\arcmin \times 60\arcmin$ optical disk, is much larger than the WIRCam fields of view, monitoring of the sky zeropoint is only possible by periodically pointing the telescope away from M31, towards blank sky---\emph{sky-target} (ST) nodding. 
 
-While the resolved stellar photometry observing regime is straightforwardly accomplished by requesting critical seeing in the Queue Service Observing (QSO) constraints, the integrated surface brightness regime is severely challenged by our understanding of the NIR sky and its spatio-temporal variations (\todo{\S intro}). Originally, we intended for our survey in the 2007B semester at CFHT to accomplish both of these goals. My early analysis, however, suggested that sky background subtraction may not be sufficiently controlled in the those observations, which inspired a second observing campaign in 2009B at CFHT designed to provide tighter constraints on the NIR sky. Thus I describe these two observing campaigns separately in the following sections.
-
-The reader is encouraged to regard these observational designs as \emph{hypotheses} for how to best conduct a wide-field surface brightness survey in the near-infrared from the ground. A goal of this thesis will be to discriminate between the virtues of the 2007B and 2009B programmes, and determine if observational design can improve the construction of a wide-field NIR mosaic.
+Observations were taken over two semesters, 2007B and 2009B. The two compaigns employed different observing schemes, particularly sky-target nodding strategies. The reader is encouraged to regard these observational designs as \emph{hypotheses} for how to best conduct a wide-field surface brightness survey in the near-infrared from the ground. An objective of this paper is to discriminate between the virtues of the 2007B and 2009B programmes, and determine if observational design can improve the construction of a wide-field NIR mosaic.
 
 \subsection{2007B Semester} % (fold)
 \label{sec:obs7}
 
-The initial survey was carried out in the 2007B semester by the CFHT Queue Service Observing under photometric conditions. As the observations were designed for resolved stellar analysis, we requested image quality (IQ) of 0.55\arcsec--0.65\arcsec, and our PSF modeling shows this was generally achieved (see Table \ref{tab:obssummary}). This programme covers M31 with 27 contiguous WIRCam fields covering the entirety of M31 out to the optical radius, $\mu_V=23$ mag arcsec$^{-2}$. The fields are arranged with at least 1\arcmin\ overlap in declination, and approximately 5\arcmin\ overlap in right ascension.
+The initial survey was carried out in the 2007B semester by the CFHT Queue Service Observing under photometric conditions. This programme covers M31 with 27 contiguous WIRCam fields covering the entirety of M31 out to the optical radius, $\mu_V=23$ mag arcsec$^{-2}$, $R=20$~kpc. The fields are arranged with at least 1\arcmin\ overlap in declination, and approximately 5\arcmin\ overlap in right ascension.
 % FIXME check overlaps
-With the dither pattern (see below), this arrangement yields a continuous mosaic that avoids masked pixels that obscure the eastern 3\arcmin\ of the WIRCam array. The field configuration is shown in Fig. \ref{fig:fieldmap}.
+This arrangement yields a continuous mosaic that avoids masked pixels that obscure the eastern 3\arcmin\ of the WIRCam array. The field configuration is shown in Fig. \ref{fig:fieldmap}.
 
-Each field was integrated for $16\times 47 s = 12.5$ minutes in $J$ and $26\times 25 s = 10.8$ minutes in $K_s$. These integrations are sufficiently deep for resolved stellar photometry to reach at least 1 mag below the tip of the red giant branch, a crucial requirement for decomposing the contributions of red giant and asymptotic giant branch stars to the NIR light.
+Each field was integrated for $16\times 47 s = 12.5$ minutes in $J$ and $26\times 25 s = 10.8$ minutes in $K_s$. These integrations are sufficiently deep for resolved stellar photometry to reach at least 1 mag below the tip of the red giant branch, a crucial requirement for decomposing the contributions of red giant and asymptotic giant branch stars to the NIR light. \changeit{Superfluous for a SB paper?}
 
-Our surface brightness analysis objective necessitated a regular monitoring of the sky's intensity. Since M31, with a $190\arcmin \times 60\arcmin$ optical disk, is much larger than the WIRCam fields of view, monitoring of the sky zeropoint is only possible by periodically pointing the telescope away from M31, towards blank sky---\emph{sky-target} (ST) nodding. The NIR sky intensity can be expected to change by 5\% in 10 minutes \citep{Adams:1996,Vaduvescu:2004}; since the sky itself is 5 dex brighter than the outer disk of M31 in the NIR, a 5\% uncertainty in the background would be fatal. To constrain the sky to within 1\%, we chose to monitor the sky so that at worst, a sky sample would be no more than 5 minutes removed from a M31 target image. Given the exposure times, this implied a sky (S)--target (T) observing sequence of $S^3T^8S^3$ in $J$ and $S^5T^{13}S^5$ in $K_s$.\footnote{Superscripts here denote the number of times an observation is repeated in sequence for a given target disk field.}
+The 2007B ST nodding strategy was motivated canonical rules of thumb, since ST nodding sky subtraction had never been attempted on this scale before. The NIR sky intensity can be expected to change by 5\% in 10~minutes \citep{Adams:1996,Vaduvescu:2004}; since the sky itself is 5~dex brighter than the outer disk of M31 in the NIR, a 5\% uncertainty in the background would be fatal to our objective of recovering M31's NIR surface brightness. To constrain the sky to within 1\%, we chose to monitor the sky so that at worst, a sky sample would be no more than 5 minutes removed from a M31 target image. Given the exposure times, this implied a sky (S)--target (T) observing sequence of $S^3T^8S^3$ in $J$ and $S^5T^{13}S^5$ in $K_s$.\footnote{Superscripts here denote the number of times an observation is repeated in sequence for a given target disk field.}
 
 % subsection obs7 (end)
 
@@ -466,6 +467,55 @@ But NM has two weaknesses. First, it is a \emph{greedy} optimizer that will conv
 	% made with skysubpub/mosaic_plots.py
 \end{figure*}
 
+% \begin{table}[t]
+%     \centering
+%     \caption[Hierarchy of scalar sky offsets]{Hierarchy of scalar sky offsets. The `Total' sky offsets track the net offset of individual WIRCam image frames into the fitted mosaic. $\langle I_\mathrm{sky}\rangle$ is taken as the median sky surface intensity observed in the entire data set: $1.0\times 10^{-7}$ and $4.3\times 10^{-7}$ ADU s$^{-1}$ pix$^{-2}$ in the $J$ and $K_s$ bands, respectively.}
+%     \label{tab:offset_hierarchy}
+% \begin{tabular}{ll|ll|ll}
+% % \hline
+%  &  & \multicolumn{2}{c|}{$J$} & \multicolumn{2}{c}{$K_s$} \\ % \cline{3-4} \cline{5-6}
+% % \hline
+% Offset Type & Sem. & $\sigma_\Delta$ & $\frac{\sigma_\Delta}{\langle I_\mathrm{sky}\rangle }$ & $\sigma_\Delta$ & $\frac{\sigma_\Delta}{\langle I_\mathrm{sky}\rangle }$ \\
+%  & & \tiny{(mag/arcsec$^2$)} &  \tiny{(\%)} & \tiny{(mag/arcsec$^2$)} &  \tiny{(\%)} \\
+% \hline
+% \multirow{2}{*}{Frame to stack} & 07B & 20.0 & 0.50 & 18.1 & 0.26\\
+% % \hline
+%  & 09B  & 20.4 & 0.37 & 18.2 & 0.23\\
+% \hline
+% \multirow{2}{*}{Stack to block} & 07B & 22.4 & 0.06 & 21.2 & 0.02\\
+% % \hline
+%   & 09B & 24.2 & 0.01 & 22.2 & 0.01\\
+% \hline
+% \multirow{2}{*}{block to mosaic} & 07B & 20.9 & 0.24 & 19.0 & 0.11\\
+% % \hline
+%   & 09B & 20.9 & 0.24 & 19.0 & 0.11\\
+% % \hline
+% \hline
+% \multirow{2}{*}{Total} & 07B & $9.7\times 10^{-10}$ & 0.97 & $5.8\times 10^{-9}$ & 1.35 \\
+% % \hline
+%   & 09B & $6.7\times 10^{-10}$ & 0.67 & $5.1\times 10^{-9}$ & 1.19 \\
+% % \hline
+% \end{tabular}
+
+% type Band, Semester, mag sigma, sigma/sky
+% frame J 2007 20.0 0.50
+% frame J 2009 20.4 0.37
+% 
+% stack J 2007 22.4 0.06
+% stack J 2009 24.2 0.01
+% 
+% block J 2007 20.9 0.24
+% block J 2009 20.9 0.24
+% --
+% frame K 2007 18.1 0.26
+% frame K 2009 18.2 0.23
+% 
+% stack K 2007 21.2 0.02
+% stack K 2009 22.2 0.01
+% 
+% block K 2007 19.0 0.11
+% block K 2009 19.0 0.11
+
 \begin{figure*}[t]
     \centering
         \includegraphics[width=6in]{figs/offset_ratio_map_enhanced}
@@ -474,6 +524,8 @@ But NM has two weaknesses. First, it is a \emph{greedy} optimizer that will conv
     % made with skyoffset/offsetratiomap.py
     % TODO need to fix colour scheme of the histograms
 \end{figure*}
+
+
 
 
 \section{Planar Sky Offsets}
